cc_legal_tools/static/cc-legal-tools/base.css
@import '/wp-content/themes/vocabulary-theme/style.css' layer(vocabulary-theme);

/* html */
.bidi-left main ul, .bidi-left main ol {
  margin: 0 0 2em 2em;
}
.bidi-right main ul, .bidi-right main ol {
  margin: 0 2em 2em 0;
}


/* Ancilliary menu */
.bidi-left div.masthead > nav.ancilliary-menu {
  left: auto;
  right: 0;
}
.bidi-right div.masthead > nav.ancilliary-menu {
  left: 0;
  right: auto !important;
}
div.masthead > nav.ancilliary-menu span.locale {
  display: inline-flex;
  align-items: center;
  margin-top: 5px;
  padding: 6px 10px;

  background:  var(--vocabulary-brand-color-soft-turquoise);
  border: none;
  border-radius: 3px;
}
div.masthead > nav.ancilliary-menu span.locale.icon-attach:before {
  --icon-sprite: var(--fa-globe);
  --icon-sprite-size: .8em;
  opacity: .5;
}
.bidi-left div.masthead > nav.ancilliary-menu a.donate.icon-attach:before,
.bidi-left div.masthead > nav.ancilliary-menu span.locale.icon-attach:before,
.bidi-left div.masthead > nav.ancilliary-menu a.search.icon-attach:before {
  margin-left: 0;
  margin-right: .8em;
}
.bidi-right div.masthead > nav.ancilliary-menu a.donate.icon-attach:before,
.bidi-right div.masthead > nav.ancilliary-menu span.locale.icon-attach:before,
.bidi-right div.masthead > nav.ancilliary-menu a.search.icon-attach:before {
  margin-left: .8em;
  margin-right: 0;
}
.icon.fa-info, .icon-attach.fa-info:before {
  --icon-sprite: url('/wp-content/themes/vocabulary-theme/vocabulary/svg/font-awesome/icons/fa-icons.svg');
  --icon-sprite-size: .75em;
}


/* header title */
/* TODO: resolve with vocabulary-theme */
.cc-legal-tools main > header {
  align-items: center;
  /* (upstream vocabulary default-page class uses display: box) */
  display: flex;
  padding: 3em 0;
}
.cc-legal-tools,.bidi-left main > header > span.alt-titles {
  order: 1;
}
.cc-legal-tools,.bidi-left main > header > span.alt-titles > span.tool-icons {
  padding-right: 1em;
}
.cc-legal-tools,.bidi-right main > header > span.alt-titles > span.tool-icons {
  padding-left: 1em;
}
main > header > span.alt-titles > span.tool-icons > span.cc-icon > svg {
  display: inline;
  height: 2em;
  width: 2em;
  vertical-align: text-bottom;
}
.cc-legal-tools main > header > span.alt-titles > span.tool-identifier {
  font-family: 'Roboto Condensed';
  font-size: 2.1em;
  font-style: normal;
  font-weight: 700;
}
.cc-legal-tools main > header > h1 {
  margin: 0.2em 0;
  order: 2;
}
.cc-legal-tools main > header > h2 {
  margin: 0;
  order: 3;
}


/* right nav */
.cc-legal-tools main > aside {
  background-color: var(--vocabulary-brand-color-soft-gold);
  padding: 1em;
  height: fit-content;
}
.cc-legal-tools main > aside a {
  --underline-background-color: var(--vocabulary-brand-color-soft-gold);
}
main > aside > nav ul > li { /* TODO: resolve with vocabulary-theme */
  font-size: 1rem;
}


/* content */
.cc-legal-tools main > div.content > h2:first-child {
  margin-top:0;
}

.cc-legal-tools table {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
  border-collapse: collapse;
  border-spacing: 0;
}
.cc-legal-tools table > thead > tr {
  position: -webkit-sticky;
  position: sticky;
  background-color: var(--vocabulary-brand-color-soft-tomato);
}
.cc-legal-tools table tr > td {
  border: solid var(--vocabulary-neutral-color-dark-gray);
  padding: 1em 0.5em;
  margin: 0;
}
.cc-legal-tools table tr > th {
  border: solid var(--vocabulary-neutral-color-dark-gray);
  padding: 0.5em;
  margin: 0;
}
.cc-legal-tools table tr > th {
}
.cc-legal-tools table > tbody > tr:nth-child(3n) {
    background-color: var(--vocabulary-neutral-color-lighter-gray);
}


/*.tool-meta */
.cc-legal-tools .tool-meta {
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
}
.cc-legal-tools .tool-meta div.meta-box {
  list-style: none;
  background-color: var(--vocabulary-brand-color-soft-turquoise);
  border-radius: 5px;
  padding: 0.8em;
  padding-top: 1em;
  padding-right: 1.4em;
}
.cc-legal-tools .tool-meta div.meta-box a {
  --underline-background-color: var(--vocabulary-brand-color-soft-turquoise);
  font-family: 'Source Sans Pro';
}
.cc-legal-tools .tool-meta h2 {
  font-size: 1em;
  margin: 0;
  font-family: 'Source Sans Pro';
  margin-left: 0.6em;
  display: inline;
}
.cc-legal-tools .tool-meta h2:after {
  content: ':';
}
.cc-legal-tools article.canonical-url {
  margin-bottom: 0.5em;
}
.cc-legal-tools article.canonical-url h2 {
  margin-bottom: 0.6em;
}
.cc-legal-tools article.canonical-url a {
  font-family: monospace;
}
.cc-legal-tools .tool-meta .formats ul {
  list-style: none;
  display: inline-flex;
  margin: 0;
  font-size: 1em;
}
.cc-legal-tools .tool-meta .formats ul li {
  padding: 0.3em;
}
.cc-legal-tools .tool-meta .formats ul li:first-child {
  padding-left: 0;
}
.cc-legal-tools .alt-view {
  align-self: center;
  margin-left: auto;
}
.cc-legal-tools .alt-view a {
  font-family: 'Source Sans Pro';
  font-size: 1.5em;
  font-style: normal;
  font-weight: 700;
  line-height: 150%;
}


/* Notices */
.cc-legal-tools div.notice-bottom, .cc-legal-tools div.notice-top {
  padding: 1em;
  margin-bottom: 2em;
  margin-top: 2em;
}
.cc-legal-tools div.notice-bottom > h2:first-child,
.cc-legal-tools div.notice-top > h2:first-child {
  margin-top: 0;
}
.cc-legal-tools div.notice-bottom > p:last-child,
.cc-legal-tools div.notice-top > p:last-child {
  margin-bottom: 0;
}
.cc-legal-tools div.notice-bottom {
  background-color: var(--vocabulary-brand-color-soft-turquoise);
}
.cc-legal-tools div.notice-bottom a {
  --underline-background-color: var(--vocabulary-brand-color-soft-turquoise);
}
.cc-legal-tools div.notice-top {
  background-color: var(--vocabulary-brand-color-soft-tomato);
}
.cc-legal-tools div.notice-top a {
  --underline-background-color: var(--vocabulary-brand-color-soft-tomato);
}

.cc-legal-tools p.document-link {
  font-weight: bold;
}
.cc-legal-tools.bidi-left p.document-link {
  text-align: right;
}
.cc-legal-tools.bidi-right p.document-link {
  text-align: left;
}

.cc-legal-tools div.content h2:first-child {
  margin-top: 0;
}
.cc-legal-tools div.content p:last-child {
  margin-bottom: 0;
}

/* footer */
.bidi-left footer > div.donate > a.donate.icon-attach.cc-heart-filled:before {
  margin-left: 0;
  margin-right: .3em;
}
.bidi-right footer > div.donate > a.donate.icon-attach.cc-heart-filled:before {
  margin-left: .3em;
  margin-right: 0;
}

/* print media */
@media print {
  .cc-legal-tools > footer,
  .cc-legal-tools > header {
    display: none;
  }

  .cc-legal-tools main {
    display: block;
  }

  .cc-legal-tools main > aside {
    display: none;
  }
}

